infrastructure/k8s/local/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: payment-service
spec:
  ports:
    - port: 3001
  selector:
    app: payment-service
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payment-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: payment-service
  template:
    metadata:
      labels:
        app: payment-service
    spec:
      containers:
        - name: payment-service
          image: payment-service
          ports:
            - containerPort: 3001
---
apiVersion: v1
kind: Service
metadata:
  name: order-service
spec:
  ports:
    - port: 3002
  selector:
    app: order-service
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: order-service
  template:
    metadata:
      labels:
        app: order-service
    spec:
      containers:
        - name: order-service
          image: order-service
          ports:
            - containerPort: 3002
---
apiVersion: v1
kind: Service
metadata:
  name: shop
spec:
  ports:
    - port: 3000
  selector:
    app: shop
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: shop
spec:
  replicas: 1
  selector:
    matchLabels:
      app: shop
  template:
    metadata:
      labels:
        app: shop
    spec:
      containers:
        - name: shop
          image: shop
          ports:
            - containerPort: 3000
